# PicoDVI-DMG_EMU

./: .gitignore  Readme.md
ROMS/: _controller_test.gb
software/: CMakeLists.txt  build.cmd  build_clean.cmd  buildit.cmd
software/apps/: CMakeLists.txt
software/apps/dmg/: CMakeLists.txt  dvi_dmg_v1_0_0_640x480.uf2  dvi_dmg_v1_0_0_800x600.uf2
software/apps/dmg_emu/: CMakeLists.txt  analog_microphone.c  board_pins.h  colors.c  colors.h  eeprom.c  hw_config.c  main.c  minigb_apu.c  minigb_apu.h  peanut_gb.h  pico_malloc_config.h  sdcard.h
software/apps/dmg_emu/audio/: minigb_apu.c  minigb_apu.h
software/apps/dmg_emu/roms/: controller_test_rom.h  super_mario_land_rom.h  tetris_rom.h
software/ext/FatFs_SPI/: carlk3-no-OS-FatFS-SD-SDIO-SPI-RPi-Pico- A FAT filesystem with SDIO and SPI drivers for SD card on Raspberry Pi Pico.url
software/ext/FatFs_SPI/ff15/source/: ffsystem.c
software/ext/FatFs_SPI/sd_driver/: sd_card.c
software/libdvi/: dvi.c
software/scripts/: convert_rom.bat  gb_rom_to_header.py
